--- a/Core/cmake/QtNoidCoreConfig.cmake.in
+++ b/Core/cmake/QtNoidCoreConfig.cmake.in
@@ -1,7 +1,7 @@
 @PACKAGE_INIT@
 
-# QtNoidCore Configuration File
-# This file is used by find_package(QtNoidCore) to locate the library
+# @PROJECT_NAME@  Configuration File
+# This file is used by find_package(@PROJECT_NAME@) to locate the library
 
 include(CMakeFindDependencyMacro)
 
@@ -9,7 +9,7 @@ include(CMakeFindDependencyMacro)
 find_dependency(Qt6 COMPONENTS Core)
 
 # Include the target definitions
-include("${CMAKE_CURRENT_LIST_DIR}/QtNoidCoreTargets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
 
 # Verify that all required components are available
-check_required_components(QtNoidCore)
+check_required_components(@PROJECT_NAME@)
