--- a/Common/tests/CMakeLists.txt
+++ b/Common/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 
 
-project(QtNoidCoreTests)
+project(QtNoidCommonTests)
 
 # =============================================================================
 # Find Required Packages
@@ -10,23 +10,23 @@ find_package(Qt6 REQUIRED COMPONENTS Test Core)
 
 set(CMAKE_AUTOMOC ON)
 
-add_executable(test_core
-    test_core.cpp
+add_executable(test_text
+    test_text.cpp
 )
 
-target_link_libraries(test_core
+target_link_libraries(test_text
     Qt6::Test
     Qt6::Core    
-    QtNoidCore  # Direct Target to the library as artifcat of the project
+    QtNoidCommon  # Direct Target to the library as artifcat of the project
 )
 
-add_test(NAME test_core COMMAND test_core)
+add_test(NAME test_text COMMAND test_text)
 
 
 # =============================================================================
 # Proprietà dei test
 # =============================================================================
-set_target_properties(test_core PROPERTIES
+set_target_properties(test_text PROPERTIES
     CXX_STANDARD 17
     CXX_STANDARD_REQUIRED ON
 )
@@ -34,7 +34,7 @@ set_target_properties(test_core PROPERTIES
 # =============================================================================
 # Test Configuration
 # =============================================================================
-set_tests_properties(test_core PROPERTIES
+set_tests_properties(test_text PROPERTIES
     ENVIRONMENT "QT_QPA_PLATFORM=offscreen"  # Per test headless
 )
 
