--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -36,12 +36,14 @@ set(HEADERS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 # =============================================================================
 set(SOURCES
     ${SOURCES_DIR}/text.cpp
+    ${SOURCES_DIR}/scale.cpp
 )
 
 # File header
 set(HEADERS
     ${HEADERS_DIR}/${PROJECT_NAME}/${PROJECT_NAME}  # Header convenienza
     ${HEADERS_DIR}/${PROJECT_NAME}/text.h
+    ${HEADERS_DIR}/${PROJECT_NAME}/scale.h
     ${HEADERS_DIR}/${PROJECT_NAME}/global.h
 )
 
