Text class completed with documentation and File class scaffolding
isValidEmail() and sanitizeString() are now part of the Text Class
Scale class documentation completed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,8 @@ include(CMakePackageConfigHelpers)
 set(PROJECT_DOCS
     README.md
     LICENSE
+    UserStories/QtNoid.odp
+	UserStories/QtNoidCommon_UserStories.odp
 )
 add_custom_target(${PROJECT_NAME}Docs SOURCES ${PROJECT_DOCS})
 
