--- a/Common/tests/CMakeLists.txt
+++ b/Common/tests/CMakeLists.txt
@@ -34,9 +34,15 @@ create_qt_test(test_text)
 
 
 # =============================================================================
-# Tesing Scale
+# Testing Scale
 # =============================================================================
 create_qt_test(test_scale)
+
+
+# =============================================================================
+# Testing File
+# =============================================================================
+create_qt_test(test_file)
 
 
 # =============================================================================
