Created an example for QtNoidCommon
The example is called CommonBasicUsage and shows how it is possible to integrate the QtNoidCommon library

--- a/Examples/CommonBasicUsage/CMakeLists.txt
+++ b/Examples/CommonBasicUsage/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(BasicUsage VERSION 2.0.0 LANGUAGES CXX)
+project(CommonBasicUsage VERSION 2.0.0 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -9,19 +9,13 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
 # =============================================================================
 # Search for QtNoid Installed library
 # =============================================================================
-if(WIN32)
-  find_package(QtNoidCore REQUIRED HINTS "C:/GitHub/Libs/QtNoid2")
-elseif(APPLE)
-  find_package(QtNoidCore REQUIRED HINTS "/Users/QtQb/GitHub/Libs/QtNoid2")
-endif()
-
-
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(QtNoidCommon REQUIRED HINTS "../../../Libs/QtNoid2")
 
 set(PROJECT_SOURCES
         main.cpp
@@ -31,41 +25,40 @@ set(PROJECT_SOURCES
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(BasicUsage
+    qt_add_executable(CommonBasicUsage
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET BasicUsage APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET CommonBasicUsage APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(BasicUsage SHARED
+        add_library(CommonBasicUsage SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(BasicUsage
+        add_executable(CommonBasicUsage
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(BasicUsage PRIVATE
-  Qt${QT_VERSION_MAJOR}::Widgets
-  QtNoid::QtNoidCore
+target_link_libraries(CommonBasicUsage
+  PRIVATE Qt${QT_VERSION_MAJOR}::Widgets
+   QtNoid::QtNoidCommon
 )
-
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.BasicUsage)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.CommonBasicUsage)
 endif()
-set_target_properties(BasicUsage PROPERTIES
+set_target_properties(CommonBasicUsage PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -74,12 +67,12 @@ set_target_properties(BasicUsage PROPERTIES
 )
 
 include(GNUInstallDirs)
-install(TARGETS BasicUsage
+install(TARGETS CommonBasicUsage
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(BasicUsage)
+    qt_finalize_executable(CommonBasicUsage)
 endif()
