--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
 
 
-add_subdirectory(BasicUsage)
+add_subdirectory(CoreBasicUsage)
+add_subdirectory(CommonBasicUsage)
