--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ option(BUILD_APP "Build QtNoidApp library" ON)
 
 option(BUILD_TESTS "Build tests" ON)
 
-option(BUILD_EXAMPLES "Build examples" ON)
+option(BUILD_EXAMPLES "Build examples" OFF)
 
 
 # =============================================================================
