--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required(VERSION 3.20)
 
 add_subdirectory(CoreBasicUsage)
 add_subdirectory(CommonBasicUsage)
-add_subdirectory(AppBasicUsage/AppBasicUsage)
+add_subdirectory(AppBasicUsage)
