Progressing with App::Settings

--- a/QtNoidApp/CMakeLists.txt
+++ b/QtNoidApp/CMakeLists.txt
@@ -74,6 +74,7 @@ target_link_libraries(${PROJECT_NAME}
     PUBLIC
         Qt6::Core
         Qt6::Widgets
+        QtNoidCommon
 )
 
 # Set library properties
