--- a/QtNoidApp/tests/CMakeLists.txt
+++ b/QtNoidApp/tests/CMakeLists.txt
@@ -20,7 +20,9 @@ function(create_qt_test test_name)
         Qt6::Test
         Qt6::Core
         Qt6::Gui
+        QtNoidCommon
         QtNoidApp
+
     )
 
     add_test(NAME ${test_name} COMMAND ${test_name})
