Class Parameter start
The class has been created, now I am writing tests for the class

--- a/QtNoidApp/tests/CMakeLists.txt
+++ b/QtNoidApp/tests/CMakeLists.txt
@@ -31,10 +31,14 @@ function(create_qt_test test_name)
 endfunction()
 
 # =============================================================================
-# Tesing QtNoid::Settings
+# Tesing QtNoid::App::Settings
 # =============================================================================
 create_qt_test(test_settings)
 
+# =============================================================================
+# Tesing QtNoid::App::Parameter
+# =============================================================================
+create_qt_test(test_parameter)
 
 # =============================================================================
 # Test Configuration
