--- a/QtNoidApp/tests/CMakeLists.txt
+++ b/QtNoidApp/tests/CMakeLists.txt
@@ -41,6 +41,11 @@ create_qt_test(test_settings)
 create_qt_test(test_parameter)
 
 # =============================================================================
+# Tesing QtNoid::App::ParameterList
+# =============================================================================
+create_qt_test(test_parameterlist)
+
+# =============================================================================
 # Test Configuration
 # =============================================================================
 
