--- a/QtNoidApp/CMakeLists.txt
+++ b/QtNoidApp/CMakeLists.txt
@@ -37,6 +37,7 @@ set(HEADERS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 set(SOURCES
     ${SOURCES_DIR}/settings.cpp
     ${SOURCES_DIR}/parameter.cpp
+    ${SOURCES_DIR}/parameterlist.cpp
 )
 
 # File header
@@ -45,6 +46,7 @@ set(HEADERS
     ${HEADERS_DIR}/${PROJECT_NAME}/global.h
     ${HEADERS_DIR}/${PROJECT_NAME}/settings.h
     ${HEADERS_DIR}/${PROJECT_NAME}/parameter.h
+    ${HEADERS_DIR}/${PROJECT_NAME}/parameterlist.h
 )
 
 
