--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ include(CMakePackageConfigHelpers)
 # =============================================================================
 set(PROJECT_DOCS
     README.md
+    DEVELOPMENT.md
     LICENSE
     UserStories/QtNoid.odp
 	UserStories/QtNoidCommon_UserStories.odp
