Update + serialization of presets + AppParameterBasicUsage
C++23 and new AppParameterBasicUsage example

--- a/Examples/AppParameterBasicUsage/CMakeLists.txt
+++ b/Examples/AppParameterBasicUsage/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(AppParameterListUsage VERSION 2.0.0 LANGUAGES CXX)
+project(AppParameterBasicUsage VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -12,45 +12,54 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
-# =============================================================================
-# Search for QtNoid Installed library
-# =============================================================================
 find_package(QtNoidCommon REQUIRED HINTS "../../../ExtLibs/QtNoid2")
 find_package(QtNoidApp REQUIRED HINTS "../../../ExtLibs/QtNoid2")
 
+
 set(PROJECT_SOURCES
         main.cpp
+        mainwindow.cpp
+        mainwindow.h
+        mainwindow.ui
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(AppParameterListUsage
+    qt_add_executable(AppParameterBasicUsage
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
+# Define target properties for Android with Qt 6 as:
+#    set_property(TARGET AppParameterBasicUsage APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
+# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(AppParameterListUsage SHARED
+        add_library(AppParameterBasicUsage SHARED
             ${PROJECT_SOURCES}
         )
+# Define properties for Android with Qt 5 after find_package() calls as:
+#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(AppParameterListUsage
+        add_executable(AppParameterBasicUsage
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(AppParameterListUsage
-    PRIVATE Qt${QT_VERSION_MAJOR}::Widgets
-    QtNoid::QtNoidApp
-)
+target_link_libraries(AppParameterBasicUsage
+        PRIVATE Qt${QT_VERSION_MAJOR}::Widgets
+        QtNoid::QtNoidCommon
+        QtNoid::QtNoidApp
+
+    )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.AppParameterListUsage)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.AppParameterBasicUsage)
 endif()
-set_target_properties(AppParameterListUsage PROPERTIES
+set_target_properties(AppParameterBasicUsage PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -59,12 +68,12 @@ set_target_properties(AppParameterListUsage PROPERTIES
 )
 
 include(GNUInstallDirs)
-install(TARGETS AppParameterListUsage
+install(TARGETS AppParameterBasicUsage
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(AppParameterListUsage)
+    qt_finalize_executable(AppParameterBasicUsage)
 endif()
