--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -4,6 +4,6 @@ cmake_minimum_required(VERSION 3.20)
 add_subdirectory(CoreBasicUsage)
 add_subdirectory(CommonBasicUsage)
 add_subdirectory(AppBasicUsage)
-add_subdirectory(AppParameterListUsage)
 add_subdirectory(AppParameterListBenchmark)
+add_subdirectory(AppParameterBasicUsage)
 
