Project update with CLOC report and batch file to create the report

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,8 @@ set(PROJECT_DOCS
     README.md
     DEVELOPMENT.md
     BUILD-INSTRUCTIONS.md
+    CLOC-REPORT.md
+    CLOC-Report.bat
     LICENSE
     UserStories/QtNoid.odp
 	UserStories/QtNoidCommon_UserStories.odp
