--- a/QtNoidJson/CMakeLists.txt
+++ b/QtNoidJson/CMakeLists.txt
@@ -17,9 +17,9 @@ endif()
 # =============================================================================
 # Set the target project
 # =============================================================================
-project(QtNoidApp
+project(QtNoidJson
     VERSION ${PARENT_PROJECT_VERSION}
-    DESCRIPTION "QtNoidApp - Desktop Application common features helper"
+    DESCRIPTION "QtNoidJson - JSON Utilities"
     LANGUAGES CXX
 )
 
@@ -35,18 +35,14 @@ set(HEADERS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 # Source Files
 # =============================================================================
 set(SOURCES
-    ${SOURCES_DIR}/settings.cpp
-    ${SOURCES_DIR}/parameter.cpp
-    ${SOURCES_DIR}/parameterlist.cpp
+    ${SOURCES_DIR}/txt2json.cpp
 )
 
 # File header
 set(HEADERS
     ${HEADERS_DIR}/${PROJECT_NAME}/${PROJECT_NAME}  # Header convenienza
     ${HEADERS_DIR}/${PROJECT_NAME}/global.h
-    ${HEADERS_DIR}/${PROJECT_NAME}/settings.h
-    ${HEADERS_DIR}/${PROJECT_NAME}/parameter.h
-    ${HEADERS_DIR}/${PROJECT_NAME}/parameterlist.h
+    ${HEADERS_DIR}/${PROJECT_NAME}/txt2json.h
 )
 
 
@@ -77,8 +73,6 @@ target_include_directories(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME}
     PUBLIC
         Qt6::Core
-        Qt6::Widgets
-        QtNoidCommon
 )
 
 # Set library properties
@@ -141,14 +135,12 @@ if(BUILD_TESTS)
 endif()
 
 
+
+
 # =============================================================================
 # Project Docs
 # =============================================================================
 set(PROJECT_DOCS
-    QtNoidApp.md
-    doc/AppParameterBasicUsage.md
-    doc/AppParameterListBasicUsage.md
-    doc/AppParameterListBenchmark.md
-    doc/AppSettingsBasicUsage.md
+    QtNoidJson.md
 )
 add_custom_target(${PROJECT_NAME}Docs SOURCES ${PROJECT_DOCS})
