Progessing improving the txt2json + switch to 6.9.3

--- a/Examples/JsonTxt2JsonBasicUsage/CMakeLists.txt
+++ b/Examples/JsonTxt2JsonBasicUsage/CMakeLists.txt
@@ -12,6 +12,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
+find_package(QtNoidCommon REQUIRED HINTS "../../../ExtLibs/QtNoid2")
 find_package(QtNoidJson REQUIRED HINTS "../../../ExtLibs/QtNoid2")
 
 
