--- a/QtNoidJson/CMakeLists.txt
+++ b/QtNoidJson/CMakeLists.txt
@@ -73,6 +73,7 @@ target_include_directories(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME}
     PUBLIC
         Qt6::Core
+        QtNoidCommon
 )
 
 # Set library properties
