--- a/QtNoidJson/cmake/QtNoidJsonConfig.cmake.in
+++ b/QtNoidJson/cmake/QtNoidJsonConfig.cmake.in
@@ -8,6 +8,9 @@ include(CMakeFindDependencyMacro)
 # Find required Qt6 components
 find_dependency(Qt6 COMPONENTS Core)
 
+# Find required QtNoid components
+find_dependency(QtNoidCommon REQUIRED)
+
 # Include the target definitions
 include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
 
