YAML Test suite scoffolding

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -8,4 +8,5 @@ add_subdirectory(AppParameterBasicUsage)
 add_subdirectory(AppParameterListBasicUsage)
 add_subdirectory(AppParameterListBenchmark)
 add_subdirectory(JsonTxt2JsonBasicUsage)
+add_subdirectory(YAMLtoJsonTestSuite)
 
